rename ex groups

--- a/uebungen/11.useradd.md
+++ b/uebungen/11.useradd.md
@@ -24,50 +24,56 @@ Legt einen Benutzer `karlos` so an, dass automatisch ein Heimatverzeichnis mit g
 - Wie könnte man dafür sorgen, dass alle auf diese Weise neu angelegten User zusätzlich die Datei `WELCOME.md` in ihrem Heimatverzeichnis haben?
 
 ## Übung 3: Benutzer mit individuellem Home-Verzeichnis
-Einen Benutzer `indie` mit einem Home-Verzeichnis mit Standarddateien anlegen, das unter `/srv` und nicht unter `/home` liegt.
+Legt einen Benutzer `indie` mit einem Home-Verzeichnis mit Standarddateien an, das aber unter `/srv` und nicht unter `/home` liegt.
 
 🔹 **Fragen:**
-- Was passiert, wenn man sich (also `root`) mit `su - indie` anmeldet?
+- Was passiert, wenn man sich (als `root`) mit `su - indie` anmeldet?
 
 ## Übung 4: Benutzer mit KSH als Login-Shell anlegen
-Benutzer `korn` mit der KSH als Login-Shell anlegen. Dafür müsst ihr zuerst die ZSH installieren (`apt install ksh`).
+Legt einen Benutzer `korni` mit der KSH als Login-Shell an. Dafür müsst ihr zuerst die KSH installieren (`apt install ksh`).
 
 🔹 **Fragen:**
 - Welche Shell wird standardmäßig verwendet, wenn keine Shell angegeben wird?
-- Wie kann `korn` die Shell auf `bash` ändern? Oder muss das zwingend `root` übernehmen?
+- Wie kann `korni` die Shell nachträglich auf `bash` ändern? Gibt es dafür ein Kommando? Oder muss das zwingend `root` übernehmen?
 
 ## Übung 5: Benutzer mit Kommentar (GECOS-Feld) anlegen
-Beim Anlegen eines Benutzers `karla` zusätzlich die Informationen `Karla Testara, Abteilung Testing` im GECOS-Feld speichern.
+Speichert beim Anlegen eines neueen Benutzers `karla` zusätzlich die Informationen `Karla Testara, Abteilung Testing` im GECOS/Kommentar-Feld.
 
 🔹 **Fragen:**
 - Wo wird diese Information gespeichert?
 - Wie kann man sie später ändern?
 
 ## Übung 6: Ein Passwort für den Benutzer setzen
-Sorgt nachträglich dafür, dass ihr ein Passwort für einen der neu angelegten Benutzer setzt.
+Sorgt nachträglich dafür, dass ihr ein Passwort für einen der neu angelegten Benutzer setzt, so dass sich diese auch am System anmelden können, entweder direkt per SSH oder mit dem Kommando `su` ausgeführt als regulärer Benutzer.
 
 🔹 **Fragen:**
 - Geht das auch direkt mit dem Kommando `useradd`? Oder brauchen wir dazu ein anderes Kommando?
 
-## Übung 7: Benutzer einer bestimmten Gruppe zuweisen
+## Übung 7: "Vollwertigen" Benutzer anlegen
+Legt einen neuen Benutzer so an, dass dieser 
+
+- ein Heimatverzeichnis mit Standarddateien erhält
+- im Kommentarfeld sein Vor- und Nachname eingetragen ist
+- er die `bash` als Login Shell nutzt
+- ein Passwort erhält
+
+Welche einzelnen Schritte sind dafür nötig?
+
+🔹 **Zusatzfrage:**
+* Als Administrator:innen wollen wir keine Kenntnis über die Passwörter unserer User haben. Wie könnte man also einen neuen User mit Passwort anlegen, aber dafür sorgen, dass wir nachträglich keine Kenntnis über das Passwort haben, bzw. nur bis der Account wirklich genutzt wird?
+
+## Übung 8: Benutzer einer bestimmten Gruppe zuweisen
 Legt einen Benutzer `gamie` an und weist ihn direkt der Gruppe `games` zu.
 
 🔹 **Fragen:**
-- Wie kann überprüft werden, ob der Benutzer in der Gruppe ist?
-- Was ist der Unterschied zwischen `-G` und `-g`?
+- Wie kann überprüft werden, ob der Benutzer in der Gruppe ist? Vielleicht helfen ja Kommandos wie `group` oder `id` weiter.
+- Was ist der Unterschied zwischen `-G` und `-g` von `useradd`, bzw. *primäre* (`primary`) und *erweiterten* (`supplementary`) Gruppen?
 
-## Übung 8: Benutzer sicher entfernen
-Den Benutzer `karlos` samt Home-Verzeichnis löschen.
+## Übung 9: Benutzer sicher entfernen
+Löscht den Benutzer `karlos` mitsamt des Home-Verzeichnisses (mit einem Kommando).
 
 🔹 **Fragen:**
-- Was passiert mit `/home/karlos`?
 - Was passiert mit Dateien des Users, die nicht unter `/home/karlos` liegen?
-
-## Übung 9: Benutzer mit bestimmter Benutzer-ID (UID) anlegen
-Eine feste UID (`1500`) für den neu angelegten Benutzer `fifteenhundred` bestimmen.
-
-🔹 **Fragen:**
-- Welche UID hat ein neuer Benutzer ohne diese Option?
 
 ## Übung 10: Benutzer mit Ablaufdatum erstellen
 Einen Benutzer `iamleaving` anlegen, dessen Konto am 31.12.2025 abläuft.
@@ -76,21 +82,23 @@ Einen Benutzer `iamleaving` anlegen, dessen Konto am 31.12.2025 abläuft.
 - Wo kann das Ablaufdatum überprüft werden?
 - Was passiert nach dem Ablaufdatum?
 
-## Übung 11: Benutzer mit `adduser` anlegen
-Einen neuen Benutzer `newbi` mit dem Kommando `adduser` anlegen.
+## Übung 11: Benutzer mit bestimmter Benutzer-ID (UID) anlegen
+Eine feste UID (`1500`) für den neu angelegten Benutzer `fifteenhundred` bestimmen.
+
+🔹 **Fragen:**
+- Welche UID hat ein neuer Benutzer ohne diese Option?
+
+## Übung 12: Benutzer mit `adduser` anlegen
+Legt einen neuen Benutzer `newbi` mit dem Kommando `adduser` an.
 
 🔹 **Fragen:**
 - Was ist der Unterschied zur Verwendung des Kommandos `useradd`?
+- Welche einzelnen Schritte führt `adduser` aus?
+- Ist es wirklich ein eigenes von `useradd` unabhängiges Kommanod?
 - Warum lernen wir nicht einfach nur die Verwendung von `adduser`?
 
-## Übung 12: "Vollwertigen" Benutzer anlegen
-Einen neuen Benutzer so anlegen, dass er ein Heimatverzeichnis mit Standarddateien erhält, im Kommentarfeld sein Vor- und Nachname eingetragen ist, er die BASH als Login Shell nutzt und ein Passwort erhält.
-
-🔹 **Zusatzfrage:**
-* Wie könnte man vorgehen, um einerseits einen neuen Benutzer mit Passwort anzulegen, diesen Benutzer bei der ersten Anmeldung aber dazu zu bringen, dass Passwort zu ändern, so dass wir nachträglich keine Kenntnis über das Passwort des Benutzer haben?
-
 ## Übung 13: Verwendete Dateien
-Mal angenommen, ihr hättet weder das Kommando `useradd`, noch `adduser` zur Verfügung, jedoch einen Texteditor, zufälligerweise einen gesaltenen Passworthash und Root-Rechte. 
+Mal angenommen, ihr hättet weder das Kommando `useradd`, noch `adduser` zur Verfügung, jedoch einen Texteditor, zufälligerweise einen gesaltenen Passworthash und `root` -Rechte. 
 
 Könntet ihr auch so einen vollwertigen Benutzeraccount erstellen?
 
