--- a/uebungen/13.permissions.md
+++ b/uebungen/13.permissions.md
@@ -19,13 +19,15 @@ Erstellt die Datei `datei.txt` und prüft die Berechtigungen mit `ls -l datei.tx
 3. Fügt der Datei Lese- und Schreibrechte für die *Gruppe* und *Others* hinzu.
 4. Setzt die Rechte so, dass *Gruppe* und *Others* die Datei nur *lesen* dürfen.
 
-Nutzt dafür ausschliesslich die symbolische Rechtevergabe.
+Nutzt dafür ausschliesslich die **symbolische** Rechtevergabe.
 
 ## **Übung 3: Berechtigungen setzen**
 1. Setzt die Berechtigungen der Datei `datei.txt` auf `rw-r-----` bzw. so, dass nur der *Besitzer lesen und schreiben* kann, *Mitglieder der Gruppe Leserechte* haben und *alle anderen keine Rechte*.
 1. Setzt die Berechtigungen der Datei `datei.txt` auf `rwxrw-r--`.
 3. Setzt die Berechtigungen der Datei `datei.txt` auf `r-xr-xr-x`.
 4. Setzt die Berechtigungen der Datei `datei.txt` auf `rwxr-x---`.
+
+Nutzt dafür ausschliesslich die **oktale** Rechtevergabe.
 
 ## Übung 4: Wann symbolische und wann oktale Rechtevergabe?
 Macht euch Gedanken darüber, wann die symbolische und wann die oktale Rechtevergabe sinnvoller sein könnte, bzw. ob es komplett egal ist?
