--- a/uebungen/13.permissions.md
+++ b/uebungen/13.permissions.md
@@ -1,12 +1,14 @@
 # Übungen zu Berechtigungen unter Linux
 
 >[!NOTE]
-> Um die Übungen richtig durchführen zu können, könnte es sein, dass ihr die Berechtigungen auf euer Home-Verzeichnis anpassen müsst. Falls es nicht möglich ist, mit einem anderen User in das Verzeichnis zu wechseln, schaut euch die Berechtigungen auf das Verzeichnis mit `ls -ld $HOME` an und versucht zu verstehen, warum sie so gestzt sind und euch daran hindern, mit einem fremden User dorthinein zu wechseln.
+> Um einige Übungen richtig durchführen zu können, könnte es sein, dass ihr die Berechtigungen auf euer Home-Verzeichnis anpassen müsst. Falls es nicht möglich ist, mit einem anderen User in das Verzeichnis zu wechseln, schaut euch die Berechtigungen auf das Verzeichnis mit `ls -ld $HOME` an und versucht zu verstehen, warum sie so gesetzt sind und euch daran hindern, mit einem fremden User dort hinein zu wechseln.
 > Um dies dennoch möglich zu machen, könnte das Kommando `chmod 755 $HOME` hilfreich sein.
 >
 > **Tipp:** Ihr könnt fast jedem Kommando die Option `-v` übergeben. Probiert das doch mal mit `chmod` aus, um genauer zu sehen, was passiert.
 
 **Zusatz:** Wenn ihr wollt, könnt ihr das alles ja auch mal testen. Erstellt dazu eine neue Gruppe und weist dieser einen anderen Benutzer hinzu. So könntet ihr mit diesem Benutzer z.B. Gruppenberechtigungen testen. Nutzt zum ändern der Dateieigentümerrechte das Kommando `chown` (mit `root` Rechten).
+
+Schreibrechte auf eine Datei könnt ihr testen, in dem ihr entweder mit einem Redirect oder Editor versucht, Inhalt in die Datei zu schreiben.
 
 ## **Übung 1: Rechte einer Datei anzeigen**
 Erstellt die Datei `datei.txt` und prüft die Berechtigungen mit `ls -l datei.txt`.
@@ -21,16 +23,22 @@ Erstellt die Datei `datei.txt` und prüft die Berechtigungen mit `ls -l datei.tx
 
 Nutzt dafür ausschliesslich die **symbolische** Rechtevergabe.
 
-## **Übung 3: Berechtigungen setzen**
+Spielt hier generell etwas mit der symbolischen Rechtevergabe herum, bis ihr euch sicher im Umgang damit fühlt.
+
+## **Übung 3: Berechtigungen mit numerischer/oktaler Rechtevergabe setzen**
 1. Setzt die Berechtigungen der Datei `datei.txt` auf `rw-r-----` bzw. so, dass nur der *Besitzer lesen und schreiben* kann, *Mitglieder der Gruppe Leserechte* haben und *alle anderen keine Rechte*.
 1. Setzt die Berechtigungen der Datei `datei.txt` auf `rwxrw-r--`.
 3. Setzt die Berechtigungen der Datei `datei.txt` auf `r-xr-xr-x`.
 4. Setzt die Berechtigungen der Datei `datei.txt` auf `rwxr-x---`.
 
-Nutzt dafür ausschliesslich die **oktale** Rechtevergabe.
+Nutzt dafür ausschliesslich die **numerische/oktale** Rechtevergabe.
+
+Spielt hier generell etwas mit der numerischen/oktalen Rechtevergabe herum, bis ihr euch sicher im Umgang damit fühlt.
 
 ## Übung 4: Wann symbolische und wann oktale Rechtevergabe?
-Macht euch Gedanken darüber, wann die symbolische und wann die oktale Rechtevergabe sinnvoller sein könnte, bzw. ob es komplett egal ist?
+Macht euch Gedanken darüber, ob es komplett egal ist, wann wir die symbolische und wann die oktale Rechtevergabe verwenden. 
+
+Oder gibt es jeweils Situationen, in denen eine der beiden Möglichkeiten vielleicht sinnvoller sein könnte?
 
 ## **Übung 5: Ausführrechte für ein Skript setzen**
 Erstellt eine neue Datei mit dem Namen `script.sh`.
@@ -54,13 +62,28 @@ Glückwunsch, ihr habt nun ein Script erstellt. Versucht es mit folgendem Komman
 
 2. Wenn alles geklappt hat, entfernt nun das Leserecht auf die Datei und versucht, das Skript erneut auszuführen. Warum klappt das nicht?
 
-## **Übung 6: Verzeichnisse und Schreibrechte**
+## **Übung 6: credentials Datei erstellen**
+Erstellt die Datei `credentials.txt` mit dem Inhalt `ganz doll geheim` und sorgt dafür, dass deren Inhalt von niemandem außer euch selbst mehr gelesen oder verändert werden darf. Prüft das im Anschluss mit einem anderen Benutzer. 
 
-Erstellt ein Verzeichnis `write-perm` mit der datei `remove-me` darin und entfernt anschliessend das Schreibrecht auf das Verzeichnis. 
+>[!NOTE] Dazu müsst ihr ggf. die Berechtigungen auf euer Home-Verzeichnis anpassen. Prüft einmal mit dem Kommanod `ls -ld $HOME` ob die Berechtigungen wie folgt sind: `drwx------`. Falls ja, ändert mit `chmod 755 $HOME` die Berechtigungen. Warum das nötig ist, klären wir später bzw. findet ihr das selbst in den anderen Übungen heraus.
 
-Könnt ihr die Datei jetzt noch löschen? Oder eine neue erstellen?
+## **Übung 7: Schreibrecht auf Dateien und Verzeichnisse**
 
-## **Übung 7: Verzeichnisse und ihre Berechtigungen**
+Erstellt ein Verzeichnis `write-perm` mit den Dateien `write-perm-file` und `write-perm-dir` darin. 
+
+Entfernt nun das Schreibrecht auf die Datei `write-perm-file`. 
+
+1. Könnt ihr noch Inhalt zur Datei hinzufügen, z.B. mit `echo hallo > write-perm-file`? 
+2. Könnt ihr die Datei denn löschen?
+
+Entfernt nun das Schreibrecht auf das Verzeichnis. 
+
+3. Könnt ihr die Datei `write-perm-dir` löschen?
+4. Könnt ihr noch eine neue Datei im Verzeichnis `write-perm` erstellen?
+
+Was schliesst ihr daraus zur Bedeutung des Schreibrechts, gesetzt auf Dateien bzw. Verzeichnisse? Was ist der Unterschied?
+
+## **Übung 8: Verzeichnisse und ihre Berechtigungen**
 
 Legt ein neues Verzeichnis `testdir` an und erzeugt mit `echo` und einem Redirect eine Datei mit Inhalt darin. Ändert nun die Berechtigungen auf `600`. Ihr habt also noch Lese- und Schreibrechte auf das Verzeichnis. 
 
@@ -82,26 +105,17 @@ cd testdir
 - Warum kommt es hier zu den Fehlermeldungen?
 - Was schliesst ihr daraus über die Berechtigungen, die mindestens auf ein Verzeichnis gesetzt werden müssen?
 
-## **Übung 8: Rekursive Änderung von Berechtigungen**
-Erstellt ein Verzeichnis mit Namen `permissions` und  erstellt darin drei Dateien `file1`, `file2` und `file3`. Sorgt nun dafür, dass alle Dateien im Verzeichnis `permissions` *schreibbar* für andere sind. Wendet das Kommando `chmod` also auf das gesamte  **Verzeichnis** inklusve Inhalt an.
+## **Übung 9: Rekursive Änderung von Berechtigungen**
+Erstellt ein Verzeichnis mit Namen `permissions` und  erstellt darin drei Dateien `file1`, `file2` und `file3`. Sorgt nun dafür, dass alle Dateien im Verzeichnis `permissions` *schreibbar* für andere sind. Wendet das Kommando `chmod` also auf das gesamte  **Verzeichnis** inklusive Inhalt an.
 
 Überprüft anschliessend, welche Berechtigungen nun auf das Verzeichnis an sich gesetzt sind mit dem Kommando `ls -ld permissions`.
 
-## **Übung 9: Rekursive Änderung von Berechtigungen**
+## **Übung 10: Rekursive Änderung von Berechtigungen**
 Wir wollen nun erreichen, dass alle im Verzeichnis enthaltenen Dateien die Berechtigungen `640` erhalten. Führt dazu das Kommando `chmod -R 640 permissions` aus. Versucht nun, mit `cd` hineinzuwechseln. Prüft die Berechtigungen mit `ls -ld permissions`. 
 
 🔹 Was ist passiert? Wie löst ihr das Problem? Was wäre cleverer gewesen, anstatt `chmod -R 640` zu verwenden?
 
-## **Übung 10: credentials Datei erstellen**
-Erstellt die Datei `credentials.txt` mit dem Inhalt `ganz doll geheim` und sorgt dafür, dass deren Inhalt von niemnaden ausser euch selbst mehr gelesen oder verändert werden darf. Probiert das im Anschluss mit einem anderen Benutzer aus.
-
-## Übung 11: Datei ohne Schreibrechte löschen
-Erstellt mit dem Kommando `echo hallo > protected.txt` eine Datei mit Inhalt. Ändert nun die Berechtigungen so, dass nur noch der Besitzer der Datei Leserechte hat. Am schnellsten geht das mit dem Kommando `chmod 400 protected.txt`. Prüft ob ihr das `echo` Kommando erneut ausführen könnt. 
-
-🔹 Könnt ihr den Inhalt der Datei noch lesen? 
-🔹 Könnt ihr die Datei denn löschen? Probiert es aus mit `rm protected.txt`.
-
-## Übung 12: Oktale Rechtevergabe
+## Übung 11: Oktale Rechtevergabe
 Erstellt die Datei `oktal.test` und führt folgendes Kommando aus `chmod 42 oktal.test` aus. Prüft anschliessend die Berechtigungen mit `ls -l`.
 
 🔹 Was fällt euch auf? Was lernt ihr daraus, wie die oktale Rechtevergabe funktioniert?
