--- a/uebungen/13.permissions.md
+++ b/uebungen/13.permissions.md
@@ -74,12 +74,13 @@ Erstellt ein Verzeichnis `write-perm` mit den Dateien `write-perm-file` und `wri
 Entfernt nun das Schreibrecht auf die Datei `write-perm-file`. 
 
 1. Könnt ihr noch Inhalt zur Datei hinzufügen, z.B. mit `echo hallo > write-perm-file`? 
-2. Könnt ihr die Datei denn löschen?
+2. Könnt ihr die Datei `write-perm-file` denn löschen?
 
 Entfernt nun das Schreibrecht auf das Verzeichnis. 
 
-3. Könnt ihr die Datei `write-perm-dir` löschen?
-4. Könnt ihr noch eine neue Datei im Verzeichnis `write-perm` erstellen?
+3. Könnt ihr noch Inhalt zur Datei hinzufügen, z.B. mit `echo hallo > write-perm-dir`? 
+4. Könnt ihr die Datei `write-perm-dir` löschen?
+5. Könnt ihr noch eine neue Datei im Verzeichnis `write-perm` erstellen?
 
 Was schliesst ihr daraus zur Bedeutung des Schreibrechts, gesetzt auf Dateien bzw. Verzeichnisse? Was ist der Unterschied?
 
